--- a/public/challenges/rock-paper-scissors/package.json
+++ b/public/challenges/rock-paper-scissors/package.json
@@ -3,13 +3,10 @@
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
-	"homepage": "https://j-0-n-e-z.github.io/rock-paper-scissors",
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build",
-		"preview": "vite preview",
-		"predeploy": "npm run build",
-		"deploy": "gh-pages -d dist"
+		"preview": "vite preview"
 	},
 	"dependencies": {
 		"react": "^18.2.0",
