--- a/package.json
+++ b/package.json
@@ -33,9 +33,12 @@
 		"eslint-plugin-react-refresh": "^0.4.3",
 		"eslint-plugin-sort-keys-fix": "^1.1.2",
 		"eslint-plugin-tailwindcss": "^3.13.0",
+		"i18next": "^23.11.1",
+		"i18next-browser-languagedetector": "^7.2.1",
 		"postcss": "^8.4.29",
 		"prettier": "^3.0.3",
 		"prettier-plugin-tailwindcss": "^0.5.4",
+		"react-i18next": "^14.1.0",
 		"tailwindcss": "^3.3.3",
 		"typescript": "^5.0.2",
 		"vite": "^4.4.5",
